2008-12-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Add RTEMS_BSPOPTS(LPC24XX_OSCILLATOR_RTC).
	Add RTEMS_BSPOPTS(LPC24XX_OSCILLATOR_MAIN).
	* include/bsp.h: #include <bspopts.h>.
	* misc/system-clocks.c: Receive LPC24XX_OSCILLATOR_RTC,
	LPC24XX_OSCILLATOR_MAIN through bspopts.h.

2008-12-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsp_specs: Move -e start from *link to *startfile to avoid warning
	for undefined entry symbol when linking relocatables with binutils
	2.19.

2008-09-30	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, preinstall.am: Add timer driver stub.

2008-09-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* ssp/ssp.c, misc/dma.c, include/dma.h, include/ssp.h: New files.

	* Makefile.am, preinstall.am, README: Update.

	* include/irq.h: Fixed typos.

	* include/lpc24xx.h: New defines and types.  Converted to UNIX line
	endings.

	* misc/system-clocks.c, startup/bspstart.c: Update for utility.h
	changes.

2008-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* clock/clock-config.c: include "../../../shared/clockdrv_shell.h".
	* Makefile.am: Reflect changes above.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate bsp.am. Build startup files as side-effect 
	of building libbspstart.a, using automake-rules.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate *_SOURCES.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Move noinst_LIBRARIES = libbsp.a before its
	components.

2008-09-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Cleanup ../../shared/include/bootcard.h handling.

2008-09-25	Joel Sherrill <joel.sherrill@oarcorp.com>

	* preinstall.am: Regenerated.

2008-09-24	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminates libcpudir.

2008-09-24	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Remove NETWORKING (Sources are missing).
